# zenbench

./: .gitignore  .gitmodules  CHANGELOG.md  CHART-GALLERY.md  CLAUDE.md  CONTEXT-HANDOFF.md  Cargo.toml  METHODOLOGY.md  MIGRATION.md  README.crates.md  README.md  REGRESSION-TESTING.md  justfile
.github/workflows/: ci.yml  pages.yml
.superwork/: release-analysis.toml
apidoc/: Cargo.toml
benches/: alloc_profiling.rs  criterion_compare_ref.rs  divan_compare.rs  divan_compare_ref.rs  sorting.rs  standalone_only.rs
docs/: multi_process.md  zenbench_driver.md
docs/public-api/: ABLATION-zenbench.md  zenbench.features.txt  zenbench.internal.txt  zenbench.txt
examples/: lock_holder.rs  sorting.rs  template_bench.rs  wasm_simd_bench.rs
site/: config.toml
site/content/: _index.md  ci-regression.md  examples.md  getting-started.md  methodology.md  migration.md
site/static/: example-report.html
site/templates/: base.html  index.html  page.html
src/: alloc.rs  baseline.rs  bench.rs  calibration.rs  charts.rs  checks.rs  ci.rs  criterion_compat.rs  daemon.rs  engine.rs  exclusive.rs  format.rs  gate.rs  html.rs  lib.rs  mcp.rs  platform.rs  quickchart.rs  report.rs  results.rs  stats.rs  timing.rs  wasm.rs
tests/: crash_stale_lock.rs  criterion_compat.rs  divan_parity.rs  edge_cases.rs  integration.rs  new_features.rs  public_api_doc.rs
