[package]
name = "zenbench"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Interleaved microbenchmarking with resource gating, paired statistics, and fire-and-forget mode"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imazen/zenbench"
keywords = ["benchmark", "performance", "profiling", "testing"]
categories = ["development-tools", "development-tools::profiling"]

[features]
default = ["cli", "daemon", "precise-timing", "alloc-profiling"]
cli = ["dep:clap"]
daemon = []
cpu-time = ["dep:cpu-time"]
# Enables hardware TSC timer (rdtsc/rdtscp on x86_64, cntvct_el0 on aarch64)
# and asm fences for stronger dead-code-elimination prevention.
# Requires unsafe code in the timing module only.
precise-timing = []
# Enables AllocProfiler for tracking heap allocations per benchmark.
# Install as #[global_allocator] in your bench binary to activate.
# Requires unsafe code in the alloc module only.
alloc-profiling = []
# Enables async benchmarking via Bencher::to_async(runtime).
# Requires tokio runtime. Uses block_on() inside sync loop — same as criterion.
async = ["dep:tokio"]
# MCP server support (future)
# mcp = []

[[bin]]
name = "zenbench"
path = "src/bin/zenbench.rs"
required-features = ["cli"]

[[bin]]
name = "zenbench-mcp"
path = "src/bin/zenbench-mcp.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38"
fs4 = { version = "0.13", features = ["sync"] }
clap = { version = "4", features = ["derive"], optional = true }
cpu-time = { version = "1.0.0", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[[bench]]
name = "sorting"
harness = false

[[bench]]
name = "divan_compare"
harness = false

[[bench]]
name = "divan_compare_ref"
harness = false

[[bench]]
name = "criterion_compare_ref"
harness = false

[[bench]]
name = "alloc_profiling"
harness = false

[dev-dependencies]
divan = "0.1"
criterion = { version = "0.8", features = ["html_reports"] }
tokio = { version = "1", features = ["rt", "macros"] }
