[package]
name = "zenbench"
version = "0.1.2"
edition = "2024"
rust-version = "1.89"
description = "Interleaved microbenchmarking with paired statistics, CI regression testing, and hardware-adaptive measurement"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imazen/zenbench"
keywords = ["benchmark", "performance", "profiling", "testing"]
categories = ["development-tools", "development-tools::profiling"]
readme = "README.md"

[features]
default = ["cli", "daemon", "precise-timing", "alloc-profiling"]
cli = ["dep:clap"]
daemon = []
cpu-time = ["dep:cpu-time"]
# Hardware TSC timer (rdtsc/rdtscp on x86_64, cntvct_el0 on aarch64)
# and asm fences for stronger dead-code-elimination prevention.
precise-timing = []
# AllocProfiler for tracking heap allocations per benchmark.
# Install as #[global_allocator] in your bench binary to activate.
alloc-profiling = []
# Drop-in criterion compatibility layer. Opt-in for migration.
criterion-compat = []
# Async benchmarking via Bencher::iter_async(runtime, || async { ... }).
async = ["dep:tokio"]
# Publication-quality SVG charts via charts-rs (horizontal bar, grouped).
charts = ["dep:charts-rs"]

[[bin]]
name = "zenbench"
path = "src/bin/zenbench.rs"
required-features = ["cli"]

[[bin]]
name = "zenbench-mcp"
path = "src/bin/zenbench-mcp.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
fs4 = { version = "0.13.1", features = ["sync"] }
clap = { version = "4.6.0", features = ["derive"], optional = true }
cpu-time = { version = "1.0.0", optional = true }
terminal_size = "0.4.4"
tokio = { version = "1.50.0", features = ["rt"], optional = true }
charts-rs = { version = "0.3.28", default-features = false, optional = true }

[[bench]]
name = "sorting"
harness = false

[[bench]]
name = "divan_compare"
harness = false

[[bench]]
name = "divan_compare_ref"
harness = false

[[bench]]
name = "criterion_compare_ref"
harness = false

[[bench]]
name = "alloc_profiling"
harness = false

[dev-dependencies]
divan = "0.1.21"
criterion = { version = "0.8.2", features = ["html_reports"] }
tokio = { version = "1.50.0", features = ["rt", "macros"] }
